cmake_minimum_required(VERSION 2.8)
project(learn_stl)
set(CMAKE_CXX_STANDARD 11)

foreach(chapter RANGE 3 19)
  AUX_SOURCE_DIRECTORY(ch${chapter} src_list)
  foreach(file ${src_list})
    get_filename_component(directory ${file} DIRECTORY)
    if(ch${chapter} STREQUAL directory)
      get_filename_component(filename ${file} NAME_WE)
      set(exec ${directory}${filename})
      add_executable(${exec} ${file})
    endif()
  endforeach(file)
endforeach(chapter)

target_link_libraries(ch5sharedptr3 rt)